Jobber med å lage helt rene logger, bare POC og WIP.